--- a/Entrada-SonyPictureAnimation-1.html
+++ b/Entrada-SonyPictureAnimation-1.html
@@ -16,7 +16,7 @@
 		</div>
 		<nav>
 			<ul class="nav">
-				<li><a href="Index.html">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a>Indice</a>
 					<ul>
 						<li><a href="#pipeline">Pipeline</a></li>
