--- a/Entrada-SonyPictureAnimation-3.html
+++ b/Entrada-SonyPictureAnimation-3.html
@@ -16,7 +16,7 @@
 		</div>
 		<nav>
 			<ul class="nav">
-				<li><a href="Index.html">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a>Acerca de</a>
 					<ul>
 						<li><a href="AlexChamba.html">Alex Chamba</a></li>
