Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</div>
 		<nav>
 			<ul class="nav">
-				<li><a href="Index.html">Inicio</a></li>
+				<li><a href="index.html">Inicio</a></li>
 				<li><a href="#proyectos">Proyectos</a>
 					<ul>
 						<li><a href="#psycho">PSYCHO-COGNITIVE</a></li>
