correcion de detalles menores

--- a/Entrada-SonyPictureAnimation-1.html
+++ b/Entrada-SonyPictureAnimation-1.html
@@ -57,13 +57,64 @@
 			<section class="pipeline" id="pipeline">
 				<h2>The Pipeline</h2>
 				<p>
-					En Proceso...
+					¿Alguna vez te has preguntado cómo es el proceso detrás de la animación? <br/>
+					<br/>
+					Es muy complejo, mucho más que el de hacer una película live-action, ya que ahí el proceso es más lineal,<br/>
+					en cambio en la animación el proceso es bastante más largo, que abarca varios departamentos.<br/>
+					<br/>
+					Es aquí donde se introduce el concepto de Pipeline, o en español, tuberia.<br/>
+					Una película animada antes de llegar a los cines o al público, tiene que pasar por una tubería enorme, y en<br/>
+					dicha tubería se realizan varios procesos a lo largo de varios departamentos como el guión, storyboards,<br/>
+					animación, doblaje, etc etc.<br/>
+					<br/>
+					Y para hacer más entendibles las cosas ya que en este curso no se profundiza mucho.<br/>
+					Dividiremos está tubería, este proceso en 4 partes importantes. La conceptualización, la preproducción, la<br/>
+					producción y la postproducción.
 				</p>
 			</section>
 			<section class="concept" id="concept">
 				<h2>Concept & Development</h2>
 				<p>
-					En Proceso...
+					Comenzando por la primera parte de este proceso, la conceptualización y el desarrollo.<br/>
+					En este proceso es donde comienza todo, y ¿como lo hace?<br/>
+					Simple, con una idea.<br/>
+					<br/>
+					Una simple idea es la semilla que lo inicia todo, pero no es una simple idea porque todos tenemos muchas ideas.<br/>
+					Como nos cuenta Jarelle Dampier, el tendrá unas 14 ideas a la semana, sin embargo no le habla a nadie de<br/>
+					ellas, excepto cuando una de esas ideas se queda resonando en su cabeza durante mucho, y cuando eso sucede es<br/>
+					porque sabes que esa idea tiene potencial, sabes que esa idea es la semilla correcta.<br/>
+					<br/>
+					Pero en este proceso de conceptualización no solo interviene una idea, ya que una idea por si sola no puede hacer<br/>
+					nada, al igual que una semilla, si dejas una semilla a la deriva no pasará nada.<br/>
+					Excepto cuando intervienes, cuando riegas la semilla, cuando la cuidas.<br/>
+					Es lo mismo con la idea, debes desarrollarla.<br/>
+					Debes darle piernas a esta idea, cómo sería la animación?, cómo se desarrollaría la historia, los personajes, el<br/>
+					mundo, las vestimentas, la apariencia, la música.<br/>
+					La conceptualización es la parte más importante de todas porque es aquí donde se forman las bases de las películas.<br/>
+					<br/>
+					Y para poder desarrollar bien la idea, se puede recurrir a cualquier herramienta, ya sean los storyboards,<br/>
+					bocetos, colleague, dibujos, fotografías.<br/>
+					Es necesario tener bases sobre cómo se quiere que termine la película, para así preguntarnos.<br/>
+					¿Podemos llegar lograr que la película finalizada se vea así? <br/>
+					<br/>
+					¿Como sabemos que la historia es buena?<br/>
+					Cuando conecta con el público, cuando logra transmitir sentimientos humanos que consiguen conectar con<br/>
+					los espectadores.<br/>
+					<br/>
+					En este proceso intervienen bastantes personas, y roles, incluso roles como los efectos especiales, post procesado,<br/>
+					marketing, publicidad, etc. roles que deberían intervenir casi al final del proceso, intervienen ahora, en el<br/>
+					inicio, en la conceptualización.<br/>
+					Esto ayuda a tener una perspectiva más amplia sobre la idea, permitiéndonos conservar algunas ideas, mejorar otras,<br/>
+					cambiarlas, eliminar unas pocas. Todo con el fin de tener una idea completamente desarrollada, y lista para convertirse<br/>
+					en una película.<br/>
+					Pero llegados a este punto con idea bien desarrollada.<br/>
+					<br/>
+					¿Como sabemos que nuestra idea es buena, que lo hemos hecho bien?<br/>
+					Simple, cuando el proyecto recibe luz verde, cuando los ejecutivos, la empresa da luz verde a la idea para ser<br/>
+					desarrollada, aunque si no te dan luz verde, no significa que no haya sido aceptada, puede ser que la idea haya sido<br/>
+					guardada para ser utilizada en otro momento, mañana, pasado, o el próximo año.<br/>
+					Pero volviendo al punto en que recibimos luz verde, una vez nuestra idea haya sido aceptada, podemos comenzar con la<br/>
+					siguiente etapa de este proceso. La preproducción 
 				</p>
 			</section>
 			<section class="preproduction" id="preproduction">
