--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<li><a href="#psycho">PSYCHO-COGNITIVE</a></li>
 						<li><a href="#persona1">Persona 1: Reborn</a></li>
 						<li><a href="#slentT">Slent T</a></li>
+						<li><a href="#slentA">Slent Animation</a></li>
 						<li><a href="#astro">Astro´s Adventure</a></li>
 					</ul>
 				</li>
@@ -104,6 +105,19 @@
 				<br/>
 				<button><a href="https://youtube.com/@slent_t?si=D20lq3HCQFOZXa62">Mas Información...</a></button>
 				<img src="Slent_T.png"/>
+			</section>
+			<section class="slentA" id="slentA">
+				<h3>SLENT ANIMATION</h3>
+				<p>
+					Slent Animation es un canal de ypoutube en el que se publicaran animaciones cortas o largas con  el fin de contar historias<br/>
+					divertidas, entretenidas, alegres, reflexivas y disfrutables, todo acompañado por animación 2D tradicional frame por frame<br/>
+					a blanco y negro, sin utilizar colores mas alla de situaciones puntuales. Este canal de youtube me ayuda personalmente a<br/>
+					seguir puliendo mis habilidades con la animación, al mismo tiempo que los demas pueden ir viendo mi crecimiento.
+				</p>
+				<br/>
+				<br/>
+				<button><a href="https://youtube.com/@slentanimation?si=SioO5Vzu37lDit1s">Mas Información...</a></button>
+				<img src="Morgana.png"/>
 			</section>
 			<section class="astro" id="astro">
 				<h3>ASTRO´S ADVENTURE</h3>
