Correcion de imagenes y botones

--- a/AlexChamba.html
+++ b/AlexChamba.html
@@ -50,7 +50,7 @@
 				en proyectos u habilidades o capacidades que se encuentra aprendiendo ahora mismo, terminando por sus<br/>
 				aspiraciones e interes a futuro tanto a corto como largo plazo. Disfruten de la vida de Alex Chamba.
 			</p>
-			<img src="Foto.png"/>
+			<img src="imgyo.jpg"/>
 		</section>
 		<section>
 			<section class="inicios" id="inicios">
