--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<li><a href="#persona1">Persona 1: Reborn</a></li>
 						<li><a href="#slentT">Slent T</a></li>
 						<li><a href="#slentA">Slent Animation</a></li>
-						<li><a href="#astro">Astro´s Adventure</a></li>
+						<li><a href="#astro">Astro's Adventure</a></li>
 					</ul>
 				</li>
 				<li><a>Acerca de</a>
